-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
Windows Embedded 7
[Windows]: QWindowsEGLContext should use the
void(*)()
approach instead of the __eglMustCastToProperFunctionPointerType typedef. The reason being that not all OpenGL ES implementations actually have that typedef, so we should not rely on it existing.
For Gerrit Dashboard: QTBUG-47964 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
124396,2 | windows: Avoid __eglMustCast... in EGL | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |