windows: Avoid __eglMustCast... in EGL

WinCE headers do not have this type.

Task-number: QTBUG-47964
Change-Id: I5573eaf754b825774576c55b7cb4acfbd9e8d8dd
Reviewed-by: Andy Shaw <andy.shaw@theqtcompany.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>